title, removed unused div close

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
 <body>
 
+<h1>Tic Tac Toe</h1>
+
+<h2>by Gabe Grazier G'Sell</h2>
+
 <div id="board">
     <table>
         <tr>
@@ -33,9 +37,6 @@
 <script src="assets/javascript/board.js"></script>
 <script src="assets/javascript/ai.js"></script>
 <link rel="stylesheet" href="assets/stylesheets/style.css">
-
-</div>
-
 
 </body>
 </html>
