comments and reorg

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 
 <head>
-
+    <title>Tic Tac Toe</title>
 </head>
 
 <body>
-
 <h1>Tic Tac Toe</h1>
 
 <h2>by Gabe Grazier G'Sell</h2>
