including testing to show Max

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <div id="board">
     <table>
         <tr>
+            <button onclick="resetBoard()">Reset Board</button>
+        </tr>
+        <tr>
             <td id="1" class="cell corner"></td>
             <td id="2" class="cell side"></td>
             <td id="3" class="cell corner"></td>
@@ -26,15 +29,13 @@
             <td id="8" class="cell side"></td>
             <td id="9" class="cell corner"></td>
         </tr>
-        <tr>
-            <button onclick="resetBoard()">Reset Board</button>
-        </tr>
     </table>
 </div>
 
 <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="assets/javascript/board.js"></script>
 <script src="assets/javascript/ai.js"></script>
+<script src="assets/javascript/testing.js"></script>
 <link rel="stylesheet" href="assets/stylesheets/style.css">
 
 </body>
