restructuring of constructors, jquery references, testing.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="board">
     <table>
         <tr>
-            <button onclick="board.reset()">Reset Board</button>
+            <button onclick="gameboard.reset()">Reset Board</button>
         </tr>
         <tr>
             <td id="1" class="cell corner"></td>
