tic tac toe separate

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1>Tic Tac Toe</h1>
+<h1>Tiiiiic Tac Toe</h1>
 
 <h2>by Gabe Grazier G'Sell</h2>
 
@@ -32,11 +32,6 @@
     </table>
 </div>
 
-<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="assets/javascript/board.js"></script>
-<script src="assets/javascript/ai.js"></script>
-<script src="assets/javascript/testing.js"></script>
-<link rel="stylesheet" href="assets/stylesheets/style.css">
 
 </body>
 </html>
