--- a/index.html
+++ b/index.html
@@ -1,38 +1,16 @@
-<!doctype html>
+<!DOCTYPE HTML>
+<html>
 
 <head>
-    <title>Tic Tac Toe</title>
+
+    <title>Gabe G'Sell</title>
+
 </head>
 
 <body>
-<h1>Tiiiiic Tac Toe</h1>
-
-<h2>by Gabe Grazier G'Sell</h2>
-
-<div id="board">
-    <table>
-        <tr>
-            <button onclick="gameboard.reset()">Reset Board</button>
-        </tr>
-        <tr>
-            <td id="1" class="cell corner"></td>
-            <td id="2" class="cell side"></td>
-            <td id="3" class="cell corner"></td>
-        </tr>
-        <tr>
-            <td id="4" class="cell side"></td>
-            <td id="5" class="cell"></td>
-            <td id="6" class="cell side"></td>
-        </tr>
-        <tr>
-            <td id="7" class="cell corner"></td>
-            <td id="8" class="cell side"></td>
-            <td id="9" class="cell corner"></td>
-        </tr>
-    </table>
+<div>
+    Check out my <a href="/tictactoe">tic tac toe game.</a>
 </div>
-
-
 </body>
+
 </html>
-        
