--- a/index.html
+++ b/index.html
@@ -2,15 +2,28 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Gabe G'Sell</title>
-
 </head>
 
 <body>
-<div>
-    Check out my <a href="/tictactoe">tic tac toe game.</a>
-</div>
+    <div class="container">
+        <div class="top-text">
+            <h2> Hi! I'm Gabe. </h2>
+            <p> I'm a software developer. Feel free to reach out. </p>
+        </div>
+        <div>
+            <img class="headshot" src='gabe_face.jpg'/>
+        </div>
+        <div class="bottom-icons">
+            <div><a href='http://www.linkedin.com/in/gabegsell' class='symbol' title='roundedlinkedin'></a></div>
+            <div><a href='http://www.github.com/gabergg' class='symbol' title='roundedgithubalt'></a></div>
+            <div><a href='http://www.facebook.com/gabe.gsell' class='symbol' title='roundedfacebook'></a></div>
+        </div>
+        <div class="bottom-text">
+            <span> gabergg@gmail.com </span>
+        </div>
+    </div>
 </body>
 
 </html>
