--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p> I'm a software developer. Feel free to reach out. </p>
         </div>
         <div>
-            <img class="headshot" src='gabe_face.jpg'/>
+            <img class="headshot" src='assets/images/gabe_face.jpg'/>
         </div>
         <div class="bottom-icons">
             <div><a href='http://www.linkedin.com/in/gabegsell' class='symbol' title='roundedlinkedin'></a></div>
