--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="top-text">
-            <h2> Hi! I'm Gabe. </h2>
+            <h2> Hey! I'm Gabe. </h2>
             <p> I'm a software developer. Feel free to reach out. </p>
         </div>
         <div>
